--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,7 @@ services:
       FLASK_ENV: development
       FLASK_DEBUG: 1
       APP_SECRET_KEY: testkey
+      APP_URL_PREFIX: /ihaveasecret
     volumes:
       - ./ihaveasecret:/app/ihaveasecret
     command: ['flask', 'run', '--host=0.0.0.0', '--port=5000']
