--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ redis = "^5.0.3"
 Flask = "^3.0.2"
 pycryptodome = "^3.20.0"
 waitress = "^3.0.0"
+flask-babel = "^4.0.0"
+jinja2 = "^3.1.3"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
