--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pycryptodome = "^3.20.0"
 waitress = "^3.0.0"
 flask-babel = "^4.0.0"
 jinja2 = "^3.1.3"
+beautifulsoup4 = "^4.13.4"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.9.0"
