--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,8 @@
-version: '3.9'
 
 services:
 
   redis:
-    image: docker.io/library/redis:7.2-alpine
+    image: docker.io/valkey/valkey:8.1-alpine
     network: internal
 
   ihaveasecret:
